Implement dbconf commit hooks
